--- a/Heart-up/Base.lproj/Main.storyboard
+++ b/Heart-up/Base.lproj/Main.storyboard
@@ -113,22 +113,15 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="誰かの悩み" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2XU-yV-LIp">
-                                <rect key="frame" x="16" y="144" width="343" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="悩みの持ち主" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ggo-oo-yQ1">
-                                <rect key="frame" x="16" y="95" width="343" height="21"/>
+                                <rect key="frame" x="16" y="64" width="343" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ida-nQ-dDu">
-                                <rect key="frame" x="20" y="308.5" width="335" height="50"/>
+                                <rect key="frame" x="20" y="158.5" width="335" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="z32-mb-zFg"/>
                                 </constraints>
@@ -136,28 +129,43 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="エラーエラー" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QTM-3n-MeZ">
+                                <rect key="frame" x="20" y="131.5" width="335" height="17"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <color key="textColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="誰かの悩み" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2XU-yV-LIp">
+                                <rect key="frame" x="16" y="93" width="343" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="h1r-pQ-CZe">
+                                <rect key="frame" x="0.0" y="258.5" width="375" height="408.5"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </tableView>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hzm-R7-aUM">
-                                <rect key="frame" x="317" y="382" width="31" height="30"/>
+                                <rect key="frame" x="324" y="216" width="31" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="送信"/>
                                 <connections>
                                     <action selector="commentAction:" destination="xI9-3v-M6q" eventType="touchUpInside" id="R0C-Z8-Z3T"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="エラーエラー" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QTM-3n-MeZ">
-                                <rect key="frame" x="20" y="281.5" width="335" height="17"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <color key="textColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="QTM-3n-MeZ" firstAttribute="leading" secondItem="idb-OC-EYB" secondAttribute="leading" constant="20" id="3Ms-Fv-tUJ"/>
+                            <constraint firstItem="idb-OC-EYB" firstAttribute="bottom" secondItem="h1r-pQ-CZe" secondAttribute="bottom" id="4Zu-2J-3ch"/>
                             <constraint firstItem="idb-OC-EYB" firstAttribute="trailing" secondItem="QTM-3n-MeZ" secondAttribute="trailing" constant="20" id="7Gv-zg-BA9"/>
                             <constraint firstItem="ida-nQ-dDu" firstAttribute="leading" secondItem="idb-OC-EYB" secondAttribute="leading" constant="20" id="7RL-PH-MYE"/>
-                            <constraint firstItem="ida-nQ-dDu" firstAttribute="centerY" secondItem="it1-GJ-6Rs" secondAttribute="centerY" id="9fe-fY-Yva"/>
+                            <constraint firstItem="ida-nQ-dDu" firstAttribute="centerY" secondItem="it1-GJ-6Rs" secondAttribute="centerY" constant="-150" id="9fe-fY-Yva"/>
+                            <constraint firstItem="idb-OC-EYB" firstAttribute="trailing" secondItem="h1r-pQ-CZe" secondAttribute="trailing" id="B87-dF-ThX"/>
+                            <constraint firstItem="h1r-pQ-CZe" firstAttribute="top" secondItem="ida-nQ-dDu" secondAttribute="bottom" constant="50" id="Ml5-DS-YZc"/>
                             <constraint firstItem="ida-nQ-dDu" firstAttribute="top" secondItem="QTM-3n-MeZ" secondAttribute="bottom" constant="10" id="PEW-12-URE"/>
+                            <constraint firstItem="h1r-pQ-CZe" firstAttribute="leading" secondItem="idb-OC-EYB" secondAttribute="leading" id="gIt-NC-Yfh"/>
                             <constraint firstItem="idb-OC-EYB" firstAttribute="trailing" secondItem="ida-nQ-dDu" secondAttribute="trailing" constant="20" id="jGX-pt-Kij"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="idb-OC-EYB"/>
@@ -165,6 +173,7 @@
                     <navigationItem key="navigationItem" title="誰かの困りごと" id="w4m-g7-y1X"/>
                     <connections>
                         <outlet property="commentInput" destination="ida-nQ-dDu" id="let-I0-cvm"/>
+                        <outlet property="commentsTable" destination="h1r-pQ-CZe" id="eJ6-fe-r0r"/>
                         <outlet property="errorLabel" destination="QTM-3n-MeZ" id="XbE-Mr-lLg"/>
                         <outlet property="nayamiLabel" destination="2XU-yV-LIp" id="LJe-O7-SYd"/>
                         <outlet property="whoNayami" destination="Ggo-oo-yQ1" id="7LD-Dd-6Rz"/>
